--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,50 @@
+
+
+//
+//
+//
+//dependencies {
+//
+//    implementation 'androidx.core:core-ktx:1.7.0'
+//    implementation 'androidx.appcompat:appcompat:1.6.0'
+//    implementation 'com.google.android.material:material:1.7.0'
+//    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+//    testImplementation 'junit:junit:4.13.2'
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+//
+//    //add google material design
+//    implementation 'com.google.android.material:material:1.4.0'
+//
+//    // add angrybyte
+//    implementation 'me.angrybyte.slider:slider:1.4.2'
+//    //implementation 'com.github.Mindinventory:AndroidCircularSlider:0.0.2'
+//
+//    implementation platform('com.google.firebase:firebase-bom:31.2.3')
+//    implementation 'com.google.firebase:firebase-analytics-ktx'
+//    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+//
+//    //these dependencies are required for the viewmodel which gives us the ability to
+//    //have data persits even if an activity is closed (i.e. rotating the device)
+//    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+//    implementation 'androidx.fragment:fragment-ktx:1.5.5'
+//
+//    // Add the dependency for the Firebase Authentication library
+//    // When using the BoM, you don't specify versions in Firebase library dependencies
+//    implementation 'com.google.firebase:firebase-auth-ktx'
+//}
+
+
+
+
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
 }
+
+
 
 android {
     namespace 'com.example.aleksandrzheleznov1166794final'
@@ -10,7 +52,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.aleksandrzheleznov1166794final"
-        minSdk 24
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -31,16 +73,43 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding true
+    }
+
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-firestore:24.1.1'
+    implementation 'com.google.firebase:firebase-firestore:24.4.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
+    //add google material design
+    implementation 'com.google.android.material:material:1.8.0'
+
+    // add angrybyte
+    implementation 'me.angrybyte.slider:slider:1.4.2'
+    //implementation 'com.github.Mindinventory:AndroidCircularSlider:0.0.2'
+
+    implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
+
+    //these dependencies are required for the viewmodel which gives us the ability to
+    //have data persits even if an activity is closed (i.e. rotating the device)
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation 'androidx.fragment:fragment-ktx:1.5.5'
+    //implementation 'com.google.android:flexbox:2.0.0'
+
+
+
+    // Add the dependency for the Firebase Authentication library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-auth-ktx'
 }
